--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,2 @@
-*.diff
-*.patch
-*.orig
-*.rej
-
-*~
-*.a
-*.lo
-*.o
-*.dylib
-
-*.gcda
-*.gcno
-*.gcov
-
-/example
-/example64
-/examplesh
-/libz.so*
-/minigzip
-/minigzip64
-/minigzipsh
-/zlib.pc
-/configure.log
-
-.DS_Store
+/zig-cache
+/zig-out
